chrome/browser/resources/contextual_tasks/composebox.css
/* ... */
:host(:not([is-zero-state])) #composeboxContainer {
  margin-bottom: var(--composebox-margin-bottom);
}

/* When the composebox is focused, make the background color
 * extend to the top of the screen so that the user can see the full
 * composebox when it is expanded. */
:host([is-composebox-focused])
  #composeboxContainer:has(#composebox[show-dropdown_]) {
  background: linear-gradient(to top,
    rgba(var(--search-background-color-rgb), 1) var(--composebox-container-height),
    rgba(var(--search-background-color-rgb), 0.9) 75vh,
  transparent);
  height: 100%;
  inset-block-start: auto;
  pointer-events: auto;
  position: fixed;
}

:host(:not([input-enabled])) #composebox::part(composebox) {
  opacity: 0.4;
  pointer-events: none;
}

:host(:not([input-enabled])) #composebox::part(input) {
  caret-color: transparent;
}

:host(:not([is-zero-state])) #composebox::before {
  background: var(--search-background-color);
  border-radius: var(--composebox-border-radius);
  content: '';
  display: block;
  /* Expand past the bottom of the composebox.
   * Requires parent to have overflow hidden.
   */
  height: 40vh;
  position: absolute;
  width: 100%;
  z-index: 0;
}

/* Add border in ::after instead of '#composebox' so it
 * is on top of ::before.
 */
#composebox::after {
  content: '';
  position: absolute;
  inset: 0;
  border: 1px solid var(--color-composebox-input-plate-outline);
  border-radius: var(--composebox-border-radius);
  box-sizing: border-box;
  pointer-events: none;
  z-index: 2;
}

#composebox {
  --cr-composebox-font-size: 16px;
  --expanded-border-radius: var(--composebox-border-radius);
  --input-bottom-spacing: 16px;
  --text-input-left-spacing: 24px;
  --text-input-top-spacing: 16px;
  --composebox-context-menu-entrypoint-button-color:
      var(--color-composebox-voice-lens-button);
  --contextual-entrypoint-and-carousel-context-entrypoint-padding-inline-start: 0;

  box-shadow: none;
  box-sizing: border-box;
  display: block;
  max-width: var(--composebox-max-width);
  position: relative;
  /* Fast out (start), slow in (end) box shadow transition. */
  transition: box-shadow 600ms cubic-bezier(0.4, 0.0, 0.2, 1);
  width: 100%;
  z-index: 1;
}

:host([is-zero-state]) #composebox {
  bottom: auto;
}

:host([is-side-panel]) #composeboxContainer #composebox {
  max-width: var(--composebox-max-width);
  min-width: 200px;
}

#composebox::part(thumbnail) {
  --thumbnail-size_: var(--file-chip-thumbnail-full-size);
  height: var(--thumbnail-size_);
  padding: 0;
  width: var(--thumbnail-size_);
}

:host([is-zero-state]) #composeboxContainer {
  background: transparent;
  display: block;
  position: relative;
}

#composebox::part(g-container) {
  max-height: 40vh;
  padding: 0;
}

#composebox::part(input),
#composebox::part(tool-chip-label),
#composebox::part(file-thumbnail-title) {
  font-family: var(--google-sans-font);
}

#composebox::part(input-container) {
  --input-bottom-spacing: 12px;
  transition: padding-top var(--emphasized-curve);
  transition-duration: var(--collapse-duration);
}

#composebox[expanding_]::part(input-container) {
  transition-duration: var(--expand-duration);
}

#composebox::part(carousel-divider) {
  display: none;
}

#composebox::part(carousel-container) {
  opacity: 0;
}

#composebox[show-file-carousel_][expanding_]::part(carousel-container) {
  opacity: 1;
  transition: var(--icon-entry-transition);
}

#composebox[show-file-carousel_]::part(carousel-container) {
  /* Give room for the close button in the top right. */
  --context-carousel-inline-end-spacing: 56px;
}

#composebox:not([expanding_])[show-file-carousel_]::part(cr-composebox-file-carousel) {
  pointer-events: none;
}

#composebox[show-file-carousel_][expanding_]::part(input-container) {
  padding-top: var(--carousel-height, 60px);
}

#composebox::part(icon-container) {
  display: none;
}

#composebox::part(input) {
  color: var(--color-composebox-font);
}

#composebox::part(input),
#composebox::part(smart-compose) {
  padding-inline-start: var(--g-input-left-spacing);
}

#composebox::part(input)::placeholder {
  color: revert;
}

#composebox::part(context-menu-entrypoint-icon) {
  --cr-icon-button-fill-color: var(--composebox-context-menu-entrypoint-button-color);
  --cr-icon-button-icon-size: var(--icon-menu-icon-size);
  --cr-icon-button-size: var(--icon-menu-button-size);
}

/* Controls cancel and submit buttons. */
#composebox::part(action-icon) {
  --cr-icon-button-hover-background-color: var(--color-composebox-hover);
}

#composebox::part(cancel-icon) {
  --cr-icon-button-fill-color: var(--color-composebox-cancel-button);
  /*
   * Inner icon size of cancel button == cancel button size,
   * unlike other buttons.
   */
  --cr-icon-button-size: var(--composebox-cancel-button-size);
  display: none;
  inset-inline-end: var(--cancel-button-inline-end);
  top: var(--cancel-button-top);
}

/* Only show when text is in there (when can submit). */
#composebox[submit-enabled_]::part(cancel-icon) {
  display: block;
}

#composebox::part(lens-icon) {
  --cr-icon-button-fill-color: var(--color-composebox-voice-lens-button);
  --cr-icon-button-icon-size: var(--icon-menu-icon-size);
  --cr-icon-button-size: var(--icon-menu-button-size);
  /* Override the expanding fade in animation to make the icon appear instantly. */
  animation: none;
  bottom: var(--composebox-icon-menu-bottom);
  display: block;
  inset-inline-end: var(--composebox-last-icon-inline-end);
  position: absolute;
  transition: ease-out 100ms;
}

:host([is-lens-overlay-showing]) #composebox::part(lens-icon) {
  background-color: var(--color-composebox-lens-active-background);
  border-radius: 50%;
}

#composebox[submit-enabled_]::part(lens-icon) {
  inset-inline-end: calc(var(--composebox-submit-container-size)
      + var(--icon-menu-spacing)
      + var(--composebox-submit-container-inline-end));
}

#composebox:not([expanding_])::part(cancel),
#composebox:not([expanding_])::part(submit) {
  pointer-events: none;
}
/* ... */

